<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_background"
    tools:context="com.ts.tsapp.tsFragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/titlecolor"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/fragment_home_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/home_touxiang"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/titletextcolor"
                android:text="@string/home_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1">


         <ImageView
             android:id="@+id/home_msgbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:src="@mipmap/home_msg"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp" />

            <ImageView
                android:id="@+id/home_title_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_msgnum"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp" />

        </RelativeLayout>



    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@color/home_background"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_gravity="center_vertical"
                    android:layout_centerHorizontal="true"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/home_search"
                        android:scaleType="fitXY"
                        />
                    <ImageView
                        android:id="@+id/search_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_sousuo"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        />

                    <EditText
                        android:id="@+id/home_search_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:textColorHint="@color/search_hint_color"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:background="@null"
                        android:imeOptions="actionSearch"
                        android:hint="商标注册进度查询"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/search_tab" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_search_before"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_search_befor"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_text_search_before"
                            android:textColor="@color/home_textcolor"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_reg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_regis"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_regis_text"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_buy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_shangbiaogoumai"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_shangbiaobuy"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_world_reg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_guojizhuce"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_guobiao_text"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_chaxun"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_chaxun_text"
                            android:textColor="@color/home_textcolor"
                            />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_fenlei"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_shangbiaofenlie"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_fenlei_tex"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_pinpaiqim"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_txt_qingming"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/home_img_jindu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/home_jindu"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_jindu_tex"
                            android:textColor="@color/home_textcolor"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/home_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/home_jinduzhanshi"
                    android:textSize="16sp"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/home_textcolor"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_help"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/colortabtext"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_help_wenhao"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        />

                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_jinduchaxun"
                android:scaleType="fitXY"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="@color/home_background"
                ></LinearLayout>

        </LinearLayout>

    </ScrollView>






</LinearLayout>
